# k_means_test

./: CMakeLists.txt
data/: data.lst  k_means.conf
inc/: ans.h  commons.h  cuMatrix.h  cukmeans.h  error.h  k_means.h  parameter.h
src/: cukmeans.cu  error.cc  k_means.cc  main.bak  main.cc  parameter.cc
